end of the navabar

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-gray-600 justify-center items-center text-center bg-red-400 text-3xl">
-    Hello world!
-  </h1>
+<body class="">
+  <!-- navbar -->
+  <nav class="relative container mx-auto p-6 ">
+    <!-- contenair -->
+    <div class="flex items-center justify-between">
+      <!-- logo -->
+      <div class="pt-2">
+        <img src="img/logo.svg" alt="logo">
+      </div>
+      <div class="hidden md:flex space-x-6">
+        <a href="#" class="hover:text-brightRed">Princing</a>
+        <a href="#" class="hover:text-brightRed">Product</a>
+        <a href="#" class="hover:text-brightRed">About Us</a>
+        <a href="#" class="hover:text-brightRed">Career</a>
+        <a href="#" class="hover:text-brightRed">Community</a>
+      </div>
+      <!-- button -->
+      <a href="#" class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:text-brightRed hover:bg-transparent ">Get started</a>
+    
+    </div>
+  </nav>
+  
   
 </body>
 </html>
