--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body class="">
+<body class="font-bold">
   <!-- navbar -->
   <nav class="relative container mx-auto p-6 ">
     <!-- contenair -->
@@ -26,7 +26,29 @@
     
     </div>
   </nav>
-  
+  <section id="hero" >
+    <div class="containerr flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0">
+      <!-- left item -->
+      <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+        <h1 class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left">
+          Bring everyone together to build better produicts
+        </h1>
+        <p class="max-w-sm text-center text-darkgrayishBlue md:text-left">
+          Manage makes iy simple for softwere teams to plan day to day taks 
+          while kepping the larger team goals in view.
+        </p>
+        <div class="flex justify-center md:justify-start">
+           <!-- button -->
+          <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:text-brightRed hover:bg-transparent ">Get started</a>
+        </div>
+      </div>
+      <!-- image right -->
+      <div class="md:w-1/2">
+        <img src="img/illustration-intro.svg" alt="illustration image">
+      </div>
+
+    </div>
+  </section>
   
 </body>
 </html>
