end of the feature

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body class="font-bold">
+<body class="">
   <!-- navbar -->
   <nav class="relative container mx-auto p-6 ">
     <!-- contenair -->
@@ -27,13 +27,13 @@
     </div>
   </nav>
   <section id="hero" >
-    <div class="containerr flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0">
+    <div class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0">
       <!-- left item -->
       <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
         <h1 class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left">
           Bring everyone together to build better produicts
         </h1>
-        <p class="max-w-sm text-center text-darkgrayishBlue md:text-left">
+        <p class="max-w-sm text-center text-gray-500  md:text-left">
           Manage makes iy simple for softwere teams to plan day to day taks 
           while kepping the larger team goals in view.
         </p>
@@ -46,9 +46,85 @@
       <div class="md:w-1/2">
         <img src="img/illustration-intro.svg" alt="illustration image">
       </div>
-
     </div>
   </section>
+
+  <!-- Feature section -->
+  <section id="features">
+    <div class="container flex flex-col px-4 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row">
+      <!-- item left what different-->
+      <div class="flex flex-col space-y-12 md:w-1/2">
+        <h2 class="max-w-md text-4xl font-bold text-center">what's different about Manage ?</h2>
+        <p class="max-w-sm text-center text-gray-500 text-darkGrayishBlue md:text-left">
+          Manage provides all the functionallity your team needs, without the complexity. Our software is tailor made for modern digital product teams 
+        </p>
+      </div>
+      <!-- item right number liste -->
+      <div class="flex flex-col space-y-8 md:w-1/2">
+        <!-- liste iteme -->
+        <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flew-row">
+          <!-- heading -->
+          <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+            <div class="flex items-center space-x-2">
+              <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                01
+              </div>
+              <h3 class="text-base font-bold md:mb-4 bg-brightRedSuplight px-10 rounded-full md:hidden">Track company-wide progress</h3>
+            </div>
+          </div>
+
+          <div>
+            <h3 class="hidden mb-4 text-lg font-bold md:block">
+              Track company-wide progress
+            </h3>
+            <p class="text-darkGrayishBlue">
+              See how you day-to-day taks fit into the wider vision. Go from tracking progress at the milestone levele all way done to the smalest of details. Nzvzr lose sight of the bigger picture again.
+            </p>
+          </div>
+        </div>
+        <!-- liste iteme -->
+        <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flew-row">
+          <!-- heading -->
+          <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+            <div class="flex items-center space-x-2">
+              <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                02
+              </div>
+              <h3 class="text-base font-bold md:mb-4 bg-brightRedSuplight px-10 rounded-full md:hidden">Advanced built-in reports</h3>
+            </div>
+          </div>
+
+          <div>
+            <h3 class="hidden mb-4 text-lg font-bold md:block">Advanced built-in reports</h3>
+            <p class="text-darkGrayishBlue">
+              See how you day-to-day taks fit into the wider vision. Go from tracking progress at the milestone levele all way done to the smalest of details. Nzvzr lose sight of the bigger picture again.
+            </p>
+          </div>
+        </div>
+        <!-- liste iteme -->
+        <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flew-row">
+          <!-- heading -->
+          <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+            <div class="flex items-center space-x-2">
+              <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                03
+              </div>
+              <h3 class="text-base font-bold md:mb-4 bg-brightRedSuplight px-10 rounded-full md:hidden">Everything you need in one place</h3>
+            </div>
+          </div>
+
+          <div>
+            <h3 class="hidden mb-4 text-lg font-bold md:block">Everything you need in one place</h3>
+            <p class="text-darkGrayishBlue">
+              See how you day-to-day taks fit into the wider vision. Go from tracking progress at the milestone levele all way done to the smalest of details. Nzvzr lose sight of the bigger picture again.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonial -->
   
 </body>
 </html>
