--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,43 @@
   </section>
 
   <!-- Testimonial -->
-  
+  <section id="testimonials">
+    <!-- container to heading ant test block -->
+    <div class="max-w-6xl px-5 mx auto mt-32 text-center">
+      <!-- headding -->
+      <h2 class="text-4xl font-bold text-center">What's Different About Manage ?</h2>
+      <!-- Testimonial -->
+      <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+        <!-- testimonial 1 -->
+        <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+          <img src="img/avatar-ali.png" alt="ali" class="w-16 -mt-14">
+          <h5 class="text-lg font-bold">shaniyan</h5>
+          <p class="text-sm text-drakGrayishBlue">
+            "Manage has supercharged our team's workflow the ability to maintian visibility on larger milestonnes all timzq kneps everyone motivated"
+          </p>
+        </div>
+        <!-- testimonial 2 -->
+        <div class="flex flex-col items-center mt-10 p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:mt-0">
+          <img src="img/avatar-shanai.png" alt="ali" class="w-16 -mt-14">
+          <h5 class="text-lg font-bold">sakian</h5>
+          <p class="text-sm text-drakGrayishBlue">
+            "Manage has supercharged our team's workflow the ability to maintian visibility on larger milestonnes all timzq kneps everyone motivated"
+          </p>
+        </div>
+        <!-- testimonial 2 -->
+        <div class="flex flex-col items-center mt-10 p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 md:mt-0">
+          <img src="img/avatar-anisha.png" alt="ali" class="w-16 -mt-14">
+          <h5 class="text-lg font-bold">Inata</h5>
+          <p class="text-sm text-drakGrayishBlue">
+            "Manage has supercharged our team's workflow the ability to maintian visibility on larger milestonnes all timzq kneps everyone motivated"
+          </p>
+        </div>
+      </div>
+      <!-- button -->
+      <div class="my-16">
+        <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:text-brightRed hover:bg-transparent ">Get started</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
