--- a/src/index.html
+++ b/src/index.html
@@ -163,5 +163,17 @@
       </div>
     </div>
   </section>
+
+  <!-- section simplify -->
+  <section id="cta" class="bg-brightRed">
+    <!-- flex container -->
+    <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:flex-row md:space-y-0">
+      <!-- /headding -->
+      <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+        Simplify how your team work today
+      </h2>
+      <a href="#" class="p-3 px-6 pt-2 text-brightRed bg-white shadow-2xl rounded-full baseline hover:bg-neutral-300 ">Get started</a>
+    </div>
+  </section>
 </body>
 </html>
