--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,14 @@
       <a href="#" class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:text-brightRed hover:bg-transparent ">Get started</a>
       <!-- Humburger icon -->
       <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-        <span class="humburger-top"></span>
-        <span class="humburger-middle"></span>
-        <span class="humburger-bottom"></span>
+        <span class="hamburger-top"></span>
+        <span class="hamburger-middle"></span>
+        <span class="hamburger-bottom"></span>
       </button>
     </div>
     <!-- Mobile Menu -->
     <div class="md:hidden">
-      <div id="menu-absolute" class="flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+      <div id="menu-absolute" class="hidden flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
         <a href="#" class="hover:text-brightRed">Princing</a>
         <a href="#" class="hover:text-brightRed">Product</a>
         <a href="#" class="hover:text-brightRed">About us</a>
