--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     </div>
     <!-- Mobile Menu -->
     <div class="md:hidden">
-      <div id="menu-absolute" class="hidden flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+      <div id="menu" class="absolute hidden flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
         <a href="#" class="hover:text-brightRed">Princing</a>
         <a href="#" class="hover:text-brightRed">Product</a>
         <a href="#" class="hover:text-brightRed">About us</a>
@@ -258,6 +258,8 @@
 
     </div>
   </footer>
-
+ 
+  <!-- js -->
+  <script src="js/scriot.js"></script>
 </body>
 </html>
